--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "cache-manager": "^4.0.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.7.0",
     "mongoose": "^6.9.0",
+    "redis": "^4.6.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
