--- a/apps/item-tagger-service/.env
+++ b/apps/item-tagger-service/.env
@@ -1,4 +1,11 @@
 # Local development config
 PORT=3000
 MONGODB_URI=mongodb+srv://root:Pwd14569887@cluster0.7tyvmqk.mongodb.net/?retryWrites=true&w=majority
-REDIS_URI=redis://default:redispw@localhost:49155
+REDIS_URI=redis://default:redispw@localhost:49156
+RABBITMQ_URI=amqps://sdqnpmgy:kP_E6hOGRg2VAYF7snL1Qu1egnUpgGHK@puffin.rmq2.cloudamqp.com/sdqnpmgy
+DB_UPDATE_EXCHANGE_NAME=db_update_exchange
+TAG_ADDITION_QUEUE_NAME=tag_addition_queue
+TAG_REMOVAL_QUEUE_NAME=tag_removal_queue
+TAG_ADDITION_QUEUE_ROUTING_KEY=rmq_tag_add_route
+TAG_REMOVAL_QUEUE_ROUTING_KEY=rmq_tag_rem_route
+DEFAULT_TAGS_CACHE_KEYS_TTL_SECONDS=86400
