--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "amqplib": "^0.10.3",
     "cache-manager": "^4.0.0",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "generic-pool": "^3.9.0",
     "joi": "^17.7.0",
     "mongoose": "^6.9.0",
     "redis": "^4.6.4",
@@ -45,6 +47,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
