Added RabbitMQ publisher and subscriber clients

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@automapper/types": "^6.3.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.3.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/core": "^9.3.9",
+    "@nestjs/microservices": "^9.3.9",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^8.0.0",
+    "amqp-connection-manager": "^4.1.11",
     "amqplib": "^0.10.3",
     "cache-manager": "^4.0.0",
     "cache-manager-redis-store": "^2.0.0",
