Complete RMQ consumer implementation

--- a/apps/item-tag-db-update-consumer/.env
+++ b/apps/item-tag-db-update-consumer/.env
@@ -1,4 +1,5 @@
 PORT=3000
 RABBITMQ_URI=amqps://sdqnpmgy:kP_E6hOGRg2VAYF7snL1Qu1egnUpgGHK@puffin.rmq2.cloudamqp.com/sdqnpmgy
+MONGODB_URI=mongodb+srv://root:Pwd14569887@cluster0.7tyvmqk.mongodb.net/?retryWrites=true&w=majority
 TAG_ADDITION_QUEUE_NAME=tag_addition_queue
 TAG_REMOVAL_QUEUE_NAME=tag_removal_queue
