--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "tagging-system-backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Pratyush Prateek",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "rimraf apps/%npm_config_app%/dist && nest build %npm_config_app%",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start %npm_config_app% --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
