--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Build services
-      run: ../../infra/.build-linux/build.sh
+      run: ./infra/.build-linux/build.sh
