--- a/apps/item-tagger-service/Dockerfile
+++ b/apps/item-tagger-service/Dockerfile
@@ -1,16 +1,16 @@
 FROM node:alpine as development
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
-RUN npm run build item-tagger-service
+RUN npm run build --app=item-tagger-service
 
 FROM node:alpine as production
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install --only=production
+RUN npm ci --only=production
 COPY . .
-COPY --from=development /usr/src/app/dist ./dist
-CMD ["node", "dist/apps/item-tagger-service/main"]
+COPY --from=development /usr/src/app/dist ./apps/item-tagger-service/dist
+CMD ["node", "./apps/item-tagger-service/dist/main"]
