--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: NodeJS with Webpack
+name: Pull Request Pipeline
 
 on:
   pull_request:
@@ -20,3 +20,5 @@ jobs:
       run: npm ci
     - name: Build services
       run: ./infra/.build-linux/build.sh
+    - name: Docker build:item-retrieval-service
+      run: docker build --progress=plain --no-cache -t '${{env.DOCKER_HUB_REPO_NAME}}/${{env.IMAGE_PREFIX}}${{env.ITEM_TAGGER_SERVICE_NAME}}:master-latest'
