--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,5 +20,9 @@ jobs:
       run: npm ci
     - name: Build services
       run: ./infra/.build-linux/build.sh
-    - name: Docker build:item-retrieval-service
-      run: docker build --progress=plain --no-cache -t '${{env.DOCKER_HUB_REPO_NAME}}/${{env.IMAGE_PREFIX}}${{env.ITEM_TAGGER_SERVICE_NAME}}:master-latest'
+    - name: Docker build:item-tagger-service
+      env:
+        IMAGE_NAME: '${{env.DOCKER_HUB_REPO_NAME}}/${{env.IMAGE_PREFIX}}${{env.ITEM_TAGGER_SERVICE_NAME}}:master-latest'
+        IMAGE_PATH: 'apps/${{env.ITEM_TAGGER_SERVICE_NAME}}/Dockerfile'
+      run: docker build --progress=plain --no-cache -t $IMAGE_NAME -f $IMAGE_PATH .
+    
