--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,7 +22,7 @@ jobs:
       run: ./infra/.build-linux/build.sh
     - name: Docker build:item-tagger-service
       env:
-        IMAGE_NAME: '${{env.DOCKER_HUB_REPO_NAME}}/${{env.IMAGE_PREFIX}}${{env.ITEM_TAGGER_SERVICE_NAME}}:master-latest'
-        IMAGE_PATH: 'apps/${{env.ITEM_TAGGER_SERVICE_NAME}}/Dockerfile'
+        IMAGE_NAME: '${{vars.DOCKER_HUB_REPO_NAME}}/${{vars.IMAGE_PREFIX}}${{vars.ITEM_TAGGER_SERVICE_NAME}}:master-latest'
+        IMAGE_PATH: 'apps/${{vars.ITEM_TAGGER_SERVICE_NAME}}/Dockerfile'
       run: docker build --progress=plain --no-cache -t $IMAGE_NAME -f $IMAGE_PATH .
     
