--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,15 +21,15 @@ jobs:
       run: npm ci
     - name: Build services
       run: ./infra/.build-linux/build.sh
-    - name: 'Docker build:${{vars.ITEM_TAGGER_SERVICE_NAME}}'
+    - name: 'Docker build:${{vars.TAGGER_RETRIEVAL_SERVICE_NAME}}'
       env:
-        IMAGE_NAME: '${{vars.DOCKER_HUB_REPO_NAME}}/${{vars.IMAGE_PREFIX}}${{vars.ITEM_TAGGER_SERVICE_NAME}}:master-latest'
-        IMAGE_PATH: 'apps/${{vars.ITEM_TAGGER_SERVICE_NAME}}/Dockerfile'
+        IMAGE_NAME: '${{vars.DOCKER_HUB_REPO_NAME}}/${{vars.IMAGE_PREFIX}}${{vars.TAGGER_RETRIEVAL_SERVICE_NAME}}:master-latest'
+        IMAGE_PATH: 'apps/${{vars.TAGGER_RETRIEVAL_SERVICE_NAME}}/Dockerfile'
       run: docker build --progress=plain --no-cache -t $IMAGE_NAME -f $IMAGE_PATH .
-    - name: 'Docker build:${{vars.ITEM_RETRIEVAL_SERVICE_NAME}}'
+    - name: 'Docker build:${{vars.USER_SERVICE_NAME}}'
       env:
-        IMAGE_NAME: '${{vars.DOCKER_HUB_REPO_NAME}}/${{vars.IMAGE_PREFIX}}${{vars.ITEM_RETRIEVAL_SERVICE_NAME}}:master-latest'
-        IMAGE_PATH: 'apps/${{vars.ITEM_RETRIEVAL_SERVICE_NAME}}/Dockerfile'
+        IMAGE_NAME: '${{vars.DOCKER_HUB_REPO_NAME}}/${{vars.IMAGE_PREFIX}}${{vars.USER_SERVICE_NAME}}:master-latest'
+        IMAGE_PATH: 'apps/${{vars.USER_SERVICE_NAME}}/Dockerfile'
       run: docker build --progress=plain --no-cache -t $IMAGE_NAME -f $IMAGE_PATH .
     - name: 'Docker build:${{vars.CONSUMER_NAME_ITEM_TAG_DB_UPDATE}}'
       env:
