--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "rimraf apps/%npm_config_app%/dist && nest build %npm_config_app%",
+    "delete-unnecessary-files-client": "rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator && rimraf libs/common/src/clients/%npm_config_app%-client/.gitignore && rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator-ignore && rimraf libs/common/src/clients/%npm_config_app%-client/git_push.sh",
+    "generate-client": "rimraf libs/common/src/clients/%npm_config_app%-client && cross-env NODE_ENV=dev ts-node apps/%npm_config_app%/src/generate-client.ts %npm_config_app% && eslint \"libs/common/src/clients/%npm_config_app%-client/**/*.ts\" --fix && npm run delete-unnecessary-files-client",
+    "build": "rimraf apps/%npm_config_app%/dist && nest build %npm_config_app% && npm run generate-client",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start %npm_config_app% --watch",
+    "start:dev": "cross-env NODE_ENV=dev nest start %npm_config_app% --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -28,19 +30,24 @@
     "@nestjs/core": "^9.3.9",
     "@nestjs/microservices": "^9.3.9",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/swagger": "^6.3.0",
     "amqp-connection-manager": "^4.1.11",
     "amqplib": "^0.10.3",
     "cache-manager": "^4.0.0",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cross-env": "^7.0.3",
     "generic-pool": "^3.9.0",
     "joi": "^17.7.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.0",
+    "nest-openapi-tools": "^5.0.1",
     "redis": "^4.6.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
