--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "generate-client": "cross-env NODE_ENV=dev ts-node apps/%npm_config_app%/src/generate-client.ts %npm_config_app% %npm_config_client_gen%",
+    "generate-client": "rimraf libs/common/src/clients/%npm_config_app%-client && cross-env NODE_ENV=dev ts-node apps/%npm_config_app%/src/generate-client.ts %npm_config_app% && eslint \"libs/common/src/clients/%npm_config_app%-client/**/*.ts\" --fix && rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator && rimraf libs/common/src/clients/%npm_config_app%-client/.gitignore && rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator-ignore && rimraf libs/common/src/clients/%npm_config_app%-client/git_push.sh",
     "build": "rimraf apps/%npm_config_app%/dist && nest build %npm_config_app%",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
