Adding logic for building application config using configmaps

--- a/apps/tagger-retrieval-service/Dockerfile
+++ b/apps/tagger-retrieval-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:alpine as development
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
@@ -8,9 +8,9 @@ RUN npm run build --app=tagger-retrieval-service
 FROM node:alpine as production
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY package*.json ./
 RUN npm ci --omit=dev
 COPY . .
-COPY --from=development /usr/src/app/dist ./apps/tagger-retrieval-service/dist
+COPY --from=development /app/dist .
 CMD ["node", "./apps/tagger-retrieval-service/dist/main"]
