--- a/apps/user-service/Dockerfile
+++ b/apps/user-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:alpine As development
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
@@ -8,9 +8,9 @@ RUN npm run build --app=user-service
 FROM node:alpine AS production
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
-WORKDIR /usr/src/app
+WORKDIR /app
 COPY package*.json ./
 RUN npm ci --omit=dev
 COPY . .
-COPY --from=development /usr/src/app/dist ./apps/user-service/dist
+COPY --from=development /app/dist .
 CMD ["node", "./apps/user-service/dist/main"]
