--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -1,11 +1,11 @@
-FROM node:alpine as development
+FROM node:alpine As development
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 COPY . .
-RUN npm run build --app=item-tag-db-update-consumer
+RUN npm run build --app=api-gateway
 
-FROM node:alpine as production
+FROM node:alpine AS production
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
 WORKDIR /app
@@ -13,4 +13,4 @@ COPY package*.json ./
 RUN npm ci --omit=dev
 COPY . .
 COPY --from=development /app/dist .
-CMD ["node", "./apps/item-tag-db-update-consumer/dist/main"]
+CMD ["node", "./apps/api-gateway/dist/main"]
