--- a/helm/service-chart/templates/deployment.yaml
+++ b/helm/service-chart/templates/deployment.yaml
@@ -24,3 +24,10 @@ spec:
             - name: {{ $value.name }}
               value: {{ $value.value | quote}}
             {{- end}}
+          volumeMounts:
+            - name: config-{{ .Values.name }}-volume-mount
+              mountPath: /config/configmaps/
+      volumes:
+        - name: config-{{ .Values.name }}-volume-mount
+          configMap:
+            name: {{ .Values.name }}-configmap
