--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "generate-client": "rimraf libs/common/src/clients/%npm_config_app%-client && cross-env NODE_ENV=dev ts-node apps/%npm_config_app%/src/generate-client.ts %npm_config_app% && eslint \"libs/common/src/clients/%npm_config_app%-client/**/*.ts\" --fix && rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator && rimraf libs/common/src/clients/%npm_config_app%-client/.gitignore && rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator-ignore && rimraf libs/common/src/clients/%npm_config_app%-client/git_push.sh",
+    "generate-client": "rimraf libs/common/src/clients/%npm_config_app%-client && cross-env NODE_ENV=dev openapi-generator-cli generate -g typescript-nestjs --output libs/common/src/clients/%npm_config_app%-client --additional-properties=fileNaming=kebab-case,enumNameSuffix=\"\",stringEnums=true --input-spec apps/%npm_config_app%/swagger.json && eslint \"libs/common/src/clients/%npm_config_app%-client/**/*.ts\" --fix && rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator && rimraf libs/common/src/clients/%npm_config_app%-client/.gitignore && rimraf libs/common/src/clients/%npm_config_app%-client/.openapi-generator-ignore && rimraf libs/common/src/clients/%npm_config_app%-client/git_push.sh",
     "build": "rimraf apps/%npm_config_app%/dist && nest build %npm_config_app%",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
@@ -53,6 +53,7 @@
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@openapitools/openapi-generator-cli": "^2.6.0",
     "@types/amqplib": "^0.10.1",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
